# django_api_example

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  entrypoint.sh  manage.py  pyproject.toml
core/api/: urls.py
core/api/v1/: urls.py
core/api/v1/products/: handlers.py  schemas.py
core/apps/common/: models.py
core/apps/products/: admin.py  apps.py
core/apps/products/migrations/: 0001_initial.py
core/apps/products/models/: products.py
core/project/: asgi.py  urls.py  wsgi.py
core/project/settings/: local.py  main.py
docker_compose/: app.yml  storages.yml
